--- a/package.json
+++ b/package.json
@@ -14,26 +14,27 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-netlify": "^2.0.8",
 		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/cookie": "^0.5.1",
+		"autoprefixer": "^10.4.14",
+		"daisyui": "^3.1.6",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"postcss": "^8.4.24",
-		"postcss-load-config": "^4.0.1",
-		"autoprefixer": "^10.4.14",
+		"svelte-cubed": "^0.2.1",
 		"tailwindcss": "^3.3.2",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.9",
-		"daisyui": "^3.1.6",
 		"three": "^0.153.0",
-		"svelte-cubed": "^0.2.1"
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
 	},
 	"type": "module"
 }
