--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-netlify": "^2.0.8",
 		"@sveltejs/kit": "^1.20.4",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.9",
 		"@types/cookie": "^0.5.1",
 		"autoprefixer": "^10.4.14",
-		"daisyui": "^3.1.6",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -31,7 +28,6 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
-		"svelte-cubed": "^0.2.1",
 		"tailwindcss": "^3.3.2",
 		"three": "^0.153.0",
 		"typescript": "^5.0.0",
@@ -39,7 +35,18 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@dimforge/rapier3d-compat": "^0.11.2",
+		"@floating-ui/dom": "^1.5.1",
 		"@supabase/supabase-js": "^2.31.0",
-		"node-html-parser": "^6.1.5"
+		"@theatre/core": "^0.6.2",
+		"@theatre/studio": "^0.6.2",
+		"@threlte/core": "^6.0.3",
+		"@threlte/extras": "^5.0.5",
+		"@threlte/rapier": "^1.0.4",
+		"@threlte/theatre": "^1.0.5",
+		"flowbite": "^1.8.1",
+		"flowbite-svelte": "^0.43.1",
+		"node-html-parser": "^6.1.5",
+		"tailwind-merge": "^1.14.0"
 	}
 }
