--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.11.2",
 		"@floating-ui/dom": "^1.5.1",
-		"@supabase/supabase-js": "^2.31.0",
+		"@supabase/auth-helpers-sveltekit": "^0.10.2",
+		"@supabase/supabase-js": "^2.32.0",
 		"@theatre/core": "^0.6.2",
 		"@theatre/studio": "^0.6.2",
 		"@threlte/core": "^6.0.3",
